--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,9 @@
 .app {
   display: flex;
   flex-direction: column;
-  background-color: red;
   height: 100%;
   min-height: 100vh;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
