--- a/src/components/Cube/Cube.module.scss
+++ b/src/components/Cube/Cube.module.scss
@@ -9,7 +9,7 @@
   // height: 100px;
   transform-origin: 50% 50% 150px;
   transform-style: preserve-3d;
-  transition: all 0.5s ease-out;
+  // transition: all 0.5s ease-out;
 }
 
 .cube .face {
