--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -11,7 +11,6 @@
   justify-content: center;
   position: relative;
   justify-content: center;
-  perspective: 850px;
 
   &__content {
     display: flex;
@@ -20,6 +19,7 @@
     width: 90%;
     max-width: 1500px;
     margin-top: 200px;
+    // perspective: 850px;
 
     &__heading {
       position: relative;
