--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,5 +1,6 @@
 @use "../../partials/palette";
 @use "../../partials/mixins";
+@use "../../partials/breakpoints";
 
 .homePage {
   display: flex;
@@ -11,6 +12,7 @@
   justify-content: center;
   position: relative;
   justify-content: center;
+  overflow: hidden;
 
   &__content {
     display: flex;
