--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -50,6 +50,52 @@
           color: palette.$light-blue;
         }
       }
+
+      @include mixins.tablet {
+        opacity: 90%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        left: 100%;
+        width: 100%;
+        height: 100vh;
+        background: palette.$dark-blue;
+        z-index: 2;
+        padding-top: 120px;
+        transition: 0.4s;
+
+        @include mixins.desktop_xxl {
+          display: none;
+        }
+        @include mixins.desktop_xl {
+          display: none;
+        }
+
+        @include mixins.tablet {
+          display: block;
+        }
+
+        &.is-active {
+          left: 0;
+        }
+
+        &__item {
+          display: block;
+          width: 100%;
+          max-width: 200px;
+          margin: 0 auto 16px;
+          text-align: center;
+          padding: 12px 16px;
+          background-color: #0b2030;
+
+          color: #ededed;
+          text-decoration: none;
+
+          &:hover {
+            background-color: #0f283b;
+          }
+        }
+      }
     }
   }
 }
