--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -54,8 +54,7 @@
       @include mixins.tablet {
         opacity: 90%;
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 70px;
         left: 100%;
         width: 100%;
         height: 100vh;
@@ -75,7 +74,7 @@
           display: block;
         }
 
-        &.is-active {
+        &__isActive {
           left: 0;
         }
 
