--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -9,7 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 5;
+  padding-top: 40px;
+  z-index: -1;
 
   &__content {
     display: flex;
