--- a/src/partials/_palette.scss
+++ b/src/partials/_palette.scss
@@ -1,4 +1,9 @@
 $light-blue: #00abf0;
 $dark-blue: #081b29;
+$dark-blue2: #0b2030;
+$dark-blue3: #0f283b;
+
 $white: #ededed;
 $grey: #98a4bc;
+$dark-green: #122c3d;
+$aquamarine: #76d6d0;
