--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -45,14 +45,31 @@
 
       &__item {
         cursor: pointer;
-        transition: 0.3s;
+        transition: color 0.3s;
 
         &:hover {
-          color: palette.$light-blue;
+          color: palette.$aquamarine;
+          font-style: italic;
+        }
+
+        &__active {
+          color: palette.$aquamarine;
+          font-style: italic;
         }
       }
 
+      // @include mixins.desktop_xxl {
+      //   display: none;
+      // }
+      // @include mixins.desktop_xl {
+      //   display: none;
+      // }
+
       @include mixins.tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
         opacity: 90%;
         position: fixed;
         top: 70px;
@@ -63,17 +80,6 @@
         z-index: 2;
         padding-top: 120px;
         transition: 0.4s;
-
-        @include mixins.desktop_xxl {
-          display: none;
-        }
-        @include mixins.desktop_xl {
-          display: none;
-        }
-
-        @include mixins.tablet {
-          display: block;
-        }
 
         &__isActive {
           left: 0;
@@ -86,13 +92,17 @@
           margin: 0 auto 16px;
           text-align: center;
           padding: 12px 16px;
-          background-color: #0b2030;
-
-          color: #ededed;
+          background-color: palette.$dark-blue2;
+          color: palette.$white;
           text-decoration: none;
 
           &:hover {
-            background-color: #0f283b;
+            background-color: palette.$dark-blue3;
+          }
+
+          &__active {
+            color: palette.$aquamarine;
+            background-color: palette.$dark-blue2;
           }
         }
       }
