--- a/src/pages/AboutPage/AboutPage.module.scss
+++ b/src/pages/AboutPage/AboutPage.module.scss
@@ -13,7 +13,6 @@
   position: relative;
   justify-content: center;
   overflow: hidden;
-
   opacity: 0;
   transform: translateY(3rem);
   animation: fadeInUp 1.5s ease forwards;
@@ -37,13 +36,24 @@
 
       &__paragraph {
         color: palette.$grey;
+
+        & span {
+          color: white;
+        }
       }
+    }
+    @include mixins.phone {
+      gap: 20px;
     }
 
     &__info {
       display: flex;
       flex-direction: column;
       gap: 25px;
+
+      @include mixins.phone {
+        gap: 0px;
+      }
 
       &__tabs {
         display: flex;
@@ -53,8 +63,37 @@
         font-size: 20px;
         font-weight: 700;
 
+        @include mixins.phone {
+          gap: 50px;
+          flex-direction: column;
+          transform: rotate(-90deg);
+          transform-origin: left center;
+          transition: transform 0.3s;
+          margin-left: 80px;
+        }
+
         &__title {
           cursor: pointer;
+          transition: color 0.3s;
+          transition: transform 0.3s;
+
+          @include mixins.phone {
+            transform: rotate(50deg);
+            transform-origin: left center;
+            transition: transform 0.3s;
+          }
+
+          &:hover {
+            color: palette.$aquamarine;
+            font-style: italic;
+          }
+
+          &__active {
+            color: palette.$aquamarine;
+
+            cursor: pointer;
+            font-style: italic;
+          }
         }
       }
 
