--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -1,3 +1,7 @@
+@use "../../partials/palette";
+@use "../../partials/mixins";
+@use "../../partials/breakpoints";
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .project {
@@ -6,10 +10,41 @@
   position: relative;
 
   &__details {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     z-index: 1;
     width: 50%;
 
-    &__title {
+    @include mixins.desktop_sm {
+      width: 65%;
+    }
+
+    @include mixins.tablet {
+      padding: 40px;
+      width: 100%;
+      gap: 25px;
+    }
+
+    @include mixins.phone {
+      padding: 20px;
+    }
+
+    &__heading {
+      &__featured {
+        font-size: 13px;
+        font-weight: 400;
+        color: palette.$light-blue;
+      }
+
+      &__title {
+        cursor: pointer;
+        transition: color 0.3s;
+
+        &:hover {
+          color: palette.$light-blue;
+        }
+      }
     }
 
     &__description {
@@ -24,6 +59,41 @@
       &:hover {
         box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.7);
       }
+
+      @include mixins.tablet {
+        background-color: transparent;
+        box-shadow: none;
+        padding: 0;
+
+        &:hover {
+          box-shadow: none;
+        }
+      }
+    }
+
+    &__techStack {
+      display: flex;
+      padding: 0;
+      font-size: 13px;
+      gap: 20px;
+    }
+
+    &__links {
+      display: flex;
+      padding: 0;
+      gap: 10px;
+      font-size: 20px;
+
+      & li {
+        & a {
+          transition: color 0.3s;
+          color: palette.$white;
+
+          &:hover {
+            color: palette.$light-blue;
+          }
+        }
+      }
     }
   }
 
@@ -34,19 +104,31 @@
     right: 0;
     box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.4);
     overflow: hidden;
+    aspect-ratio: 3/2;
+
+    @include mixins.tablet {
+      width: 100%;
+      height: 350px;
+    }
 
     &__image {
       cursor: pointer;
       height: 100%;
       width: 100%;
       object-fit: cover;
-      filter: hue-rotate(180deg);
+      filter: brightness(0.6) hue-rotate(180deg);
+
       transition: filter 0.3s ease-in-out;
-      // filter: url(#noise) hue-rotate(180deg);;
+      // filter: url(#noise) hue-rotate(180deg);;4
 
       &:hover {
         // animation: pulse 800ms ease-in-out;
-        filter: hue-rotate(0deg);
+        filter: brightness(1) hue-rotate(0deg);
+      }
+
+      @include mixins.tablet {
+        opacity: 0.3;
+        filter: brightness(1) hue-rotate(0deg);
       }
     }
   }
