--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -8,6 +8,11 @@
   display: flex;
   align-items: center;
   position: relative;
+  width: 100%;
+
+  &__odd {
+    justify-content: end;
+  }
 
   &__details {
     display: flex;
@@ -15,6 +20,14 @@
     gap: 15px;
     z-index: 1;
     width: 50%;
+
+    &__odd {
+      align-items: end;
+
+      @include mixins.tablet {
+        align-items: flex-start;
+      }
+    }
 
     @include mixins.desktop_sm {
       width: 65%;
@@ -31,6 +44,18 @@
     }
 
     &__heading {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      font-size: clamp(14px, 2vw, 16px);
+
+      &__odd {
+        align-items: end;
+
+        @include mixins.tablet {
+          align-items: flex-start;
+        }
+      }
       &__featured {
         font-size: 13px;
         font-weight: 400;
@@ -55,6 +80,14 @@
       box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.4);
       transition: box-shadow 0.3s;
       font-size: 14px;
+
+      &__odd {
+        text-align: end;
+
+        @include mixins.tablet {
+          text-align: start;
+        }
+      }
 
       &:hover {
         box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.7);
@@ -106,9 +139,13 @@
     overflow: hidden;
     aspect-ratio: 3/2;
 
+    &__odd {
+      left: 0;
+    }
+
     @include mixins.tablet {
       width: 100%;
-      height: 350px;
+      height: 100%;
     }
 
     &__image {
@@ -117,6 +154,7 @@
       width: 100%;
       object-fit: cover;
       filter: brightness(0.6) hue-rotate(180deg);
+      object-position: top left;
 
       transition: filter 0.3s ease-in-out;
       // filter: url(#noise) hue-rotate(180deg);;4
