--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @use "./partials/palette";
 
 * {
-  font-family: "Source Code Pro", sans-serif;
+  font-family: Poppins;
   list-style: none;
   margin: 0;
   box-sizing: border-box;
