--- a/src/pages/AboutPage/AboutPage.module.scss
+++ b/src/pages/AboutPage/AboutPage.module.scss
@@ -21,9 +21,18 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    width: 90%;
-    max-width: 1500px;
+    // width: 90%;
+    // max-width: 1500px;
     margin-top: 50px;
+    width: 70%;
+    max-width: 1000px;
+    @include mixins.desktop_sm {
+      width: 80%;
+    }
+
+    @include mixins.tablet {
+      width: 88%;
+    }
 
     &__bio {
       display: flex;
