--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -18,12 +18,20 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 90%;
-    max-width: 1500px;
     margin-top: 200px;
-    // perspective: 850px;
+    width: 70%;
+    max-width: 1000px;
+
+    @include mixins.desktop_sm {
+      width: 80%;
+    }
+
+    @include mixins.tablet {
+      width: 88%;
+    }
 
     &__heading {
+      font-family: "Source Code Pro", sans-serif;
       position: relative;
       // font-size: 30px;
       font-size: clamp(16px, 2vw + 0.5rem, 25px);
@@ -42,6 +50,7 @@
     }
 
     &__para1 {
+      font-family: "Source Code Pro", sans-serif;
       position: relative;
       font-size: clamp(20px, 4vw + 0.5rem, 52px);
       font-weight: 700;
@@ -56,6 +65,7 @@
     }
 
     &__para2 {
+      font-family: "Source Code Pro", sans-serif;
       position: relative;
       font-size: clamp(18px, 2.5vw + 0.5rem, 36px);
       font-weight: 700;
@@ -65,6 +75,7 @@
       @include mixins.typewriter-animation(20, 2.9s, 5s, 5s, 2.9s, forwards);
     }
     &__para3 {
+      font-family: "Source Code Pro", sans-serif;
       position: relative;
       font-size: clamp(16px, 1.4vw + 0.5rem, 25px);
       margin: 20px 0 40px;
