--- a/src/pages/ProjectsPage/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.module.scss
@@ -4,27 +4,34 @@
 
 .projectsPage {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   background: palette.$dark-blue;
   color: palette.$white;
-  padding: 110px 0 0 0;
+  padding: 110px 0 100px 0;
   flex-grow: 1;
   width: 100%;
   justify-content: center;
   position: relative;
-  justify-content: center;
   overflow: hidden;
   opacity: 0;
   transform: translateY(3rem);
   animation: fadeInUp 1.5s ease forwards;
-  padding-bottom: 100px;
 
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 250px;
     width: 70%;
-    max-width: 900px;
+    max-width: 1000px;
     margin-top: 50px;
+    align-items: start;
+    gap: 120px;
+
+    &__heading {
+      font-size: 35px;
+      font-weight: 700;
+      font-size: clamp(22px, 4vw + 0.5rem, 35px);
+    }
 
     @include mixins.desktop_sm {
       width: 80%;
@@ -32,6 +39,23 @@
 
     @include mixins.tablet {
       width: 88%;
+      gap: 50px;
+    }
+
+    &__projectList {
+      display: flex;
+      flex-direction: column;
+      gap: 220px;
+      width: 100%;
+      padding: 0;
+
+      @include mixins.tablet {
+        gap: 80px;
+      }
+
+      @include mixins.phone_sm {
+        gap: 50px;
+      }
     }
   }
 }
