--- a/src/components/Experience/Experience.module.scss
+++ b/src/components/Experience/Experience.module.scss
@@ -7,6 +7,8 @@
   flex-direction: column;
   gap: 35px;
   padding: 0;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
 
   @include mixins.phone {
     transform: translateY(-55px);
@@ -52,5 +54,11 @@
       gap: 10px;
       padding: 0;
     }
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
   }
 }
