--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -7,6 +7,8 @@
   flex-direction: column;
   gap: 20px;
   padding: 0;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
 
   @include mixins.phone {
     transform: translateY(-55px);
@@ -46,31 +48,8 @@
   }
 }
 
-// .skill {
-//   display: flex;
-//   flex-direction: column;
-//   gap: 12px;
-
-//   &__heading {
-//     color: palette.$light-blue;
-//     font-size: 20px;
-//     font-weight: 700;
-//   }
-
-//   &__list {
-//     display: flex;
-//     flex-wrap: wrap;
-//     gap: 12px;
-//     padding: 0;
-
-//     &__item {
-//       display: flex;
-//       align-items: flex-end;
-//       gap: 5px;
-
-//       &__icon {
-//         width: 40px;
-//       }
-//     }
-//   }
-// }
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
