--- a/src/pages/ProjectsPage/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   background: palette.$dark-blue;
   color: palette.$white;
-  padding: 70px 0 0 0;
+  padding: 70px 0 70px 0;
   flex-grow: 1;
   width: 100%;
   justify-content: center;
